[gd_scene load_steps=5 format=3 uid="uid://cssjkv5rjo6u0"]

[ext_resource type="Script" uid="uid://bfdmwpulf0ift" path="res://src/pot.gd" id="1_b8ggh"]
[ext_resource type="Texture2D" uid="uid://pr7pbd3ou5ki" path="res://Sprites/ChatGPT Image Jun 7, 2025, 08_50_28 PM.png" id="1_cc2i1"]
[ext_resource type="PackedScene" uid="uid://hjae5xhqvxxw" path="res://Scenes/cooking_timer.tscn" id="3_rj0eo"]
[ext_resource type="Script" uid="uid://bix3wql3rp8uq" path="res://src/drop_area.gd" id="4_tpvhl"]

[node name="Pot" type="Area2D"]
script = ExtResource("1_b8ggh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_cc2i1")
centered = false

[node name="CookingTimer" parent="." instance=ExtResource("3_rj0eo")]
position = Vector2(26, 177)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 29.0
offset_top = 57.0
offset_right = 113.0
offset_bottom = 81.0
script = ExtResource("4_tpvhl")

[connection signal="content_added" from="." to="CookingTimer" method="_on_pot_content_added"]
[connection signal="food_cooked" from="CookingTimer" to="." method="_on_food_cooked"]
